[package]
name = "tm-interpreter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A program to simulate a turing machine"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_scan = "0.4.1"
clap = { version = "3.1.12", features = ["derive"] }
